[358] [Ruchika | Brindha] Add. test coverage